--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "dotenv": "^16.4.0",
     "express": "^4.19.0",
     "jsonwebtoken": "^9.0.2",
-    "macaroon": "^3.0.4"
+    "macaroon": "^2",
+    "macaroons.js": "^0.3.9"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
